# cpp-boilerplate

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CTestConfig.cmake  CreateBoilerPlate.bat  CreateBoilerPlate.sh  LICENSE  README.md  appveyor.yml  dir_8ee1a5e78eaec319fe5d64075812fc61.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  foo-impl_8h_source.html  foo_8h_source.html  globals.html  globals_func.html  index.html  lgtm.yml  main_8cpp.html
.github/workflows/: cmake.yml  codeql.yml
cmake/: BoilerPlateConfig.cmake.in  CI.CTestScript.cmake  CTestCustom.cmake.in  CopyDllsForDebug.cmake  Coverage.cmake  LTO.cmake  PrecompiledHeader.cmake  RunFixupBundle.cmake  Warnings.cmake
include/: precomp.h
search/: functions_0.js  pages_0.js  search.js  searchdata.js
source/: additional-sourcefile.cpp  foo-impl.h  foo.cpp  main.cpp  precomp.cpp  windows-only.cpp
source/include/: foo.h
tests/: CMakeLists.txt  failtest.cpp  successtest.cpp
